--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -23,6 +23,17 @@
       "environemnts": ["edit", "dev", "preview", "live", "prod"],
       "url": "https://www.youtube.com/@AEMGeeks",
       "passRefer": true
+    },
+    {
+      "id": "asset-library",
+      "title": "Asset-library",
+      "environemnts": ["edit", "dev"],
+      "url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html",
+      "passConfig": true,
+      "passReferrer": true,
+      "includePaths": ["**.docs**"],
+      "isPalette": true,
+      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width: 400px; height: calc(100vh-60px)"
     }
   ]
 }
