--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -34,6 +34,12 @@
       "includePaths": ["**.docs**"],
       "isPalette": true,
       "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width: 400px; height: calc(100vh-60px)"
+    },
+    {
+      "id": "library",
+      "title": "Block library",
+      "environemnts": ["edit"],
+      "url": "/tools/sidekick/library.html"
     }
   ]
 }
